--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.3.0",
     "@unocss/nuxt": "^0.48.0",
     "nuxt": "3.0.0"
   }
