--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.3.0",
+    "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@unocss/nuxt": "^0.48.0",
     "nuxt": "3.0.0"
   }
